# marie-ssg

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  generate-tasks.md  mise.toml  package.json  site.toml
.beads/: beads.left.jsonl  beads.left.meta.json  deletions.jsonl  issues.jsonl  last-touched  marie-ssg.jsonl  metadata.json
.github/workflows/: release.yml
benches/: simple_html_benchmark.rs  toml_benchmark.rs  unescape_html_benchmark.rs
docs/: flow.md  toml-migration.md
docs/prds/: prd-foundation-2024-12-15.md  prd-foundation-2026-01-07.md  prd-sitemap-generation-2025-12-23.md
docs/workflow/: README.md  create-prd.md  execute-task.md  generate-tasks.md
docs/workflow/prds/: prd-parallel-execution-2024-12-19.md  prd-watch-mode-2024-12-20.md
examples/: site.toml
examples/content/blog/: 2025-01-07-example-post.md
src/: asset_hash.rs  build.rs  config.rs  content.rs  error.rs  flame.rs  guide.rs  main.rs  output.rs  redirect.rs  rss.rs  sitemap.rs  syntax.rs  template.rs  utils.rs  watch.rs
tests/: integration_test.rs
tests/fixtures/simple_site/: site.toml
tests/fixtures/simple_site/content/blog/: another-draft.md  another-draft.meta.toml  draft-post.md  draft-post.meta.toml  first-post.md  first-post.meta.toml  second-post.md  second-post.meta.toml
tests/fixtures/simple_site/content/pages/: about.md  about.meta.toml
tests/fixtures/simple_site/static/: style.css
tests/fixtures/simple_site/templates/: blog.html  blog_index.html  page.html  page_index.html  site_index.html
