[package]
name = "marie-ssg"
version = "0.7.1"
edition = "2024"

[dependencies]
argh = { version = "0" }
autumnus = { version = "0.7" }
basic-toml = { version = "0" }
chrono = { version = "0", features = ["serde"] }
markdown = { version = "1" }
minijinja = { version = "2", features = ["loader"] }
minijinja-contrib = { version = "2", features = ["datetime"] }
rayon = { version = "1" }
serde = { version = "1", features = ["derive"] }
thiserror = { version = "2" }
tracing = { version = "0" }
tracing-subscriber = { version = "0" }
walkdir = { version = "2" }

[dev-dependencies]
assert_cmd = { version = "2" }
criterion = { version = "0", features = ["html_reports"] }
predicates = { version = "3" }
scraper = { version = "0" }
tempfile = { version = "3" }

[target.'cfg(target_os = "macos")'.dependencies]
fsevent = { version = "2" }

[profile.bench]
lto = "thin"
codegen-units = 16

[profile.dev]
lto = "thin"
codegen-units = 8

[profile.release]
opt-level = "s"  # reduces binary size
debug = "full"  # No one needs an undebuggable release binary
split-debuginfo = "packed"  # generates a separate *.dwp/*.dSYM so the binary can get stripped
strip = "symbols"  # See split-debuginfo - reduces binary size
lto = true  # reduces binary size
panic = "abort"  # reduces binary size
incremental = true  # Improves re-compile times
codegen-units = 1  # reduces binary size

[profile.profiling]
inherits = "release"  # Use all the optimization settings from the release profile
debug = true  # Include debug info so 'perf' can find function names
split-debuginfo = "off"  # Keep debug info in the binary
strip = false  # Do NOT strip symbols
